code for brewery function added, and attempt to integrate with google map api

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,13 @@ header {
 #quote {
     margin-left: 45%;
 }
-.hide-btn {
+/* .hide-btn {
     display: none;
-}
+} */
+
+
+/* .each-brewery {
+    border-style: solid;
+} */
+
 
