--- a/assets/style.css
+++ b/assets/style.css
@@ -8,13 +8,69 @@ header {
 #quote {
     margin-left: 45%;
 }
-/* .hide-btn {
+
+#brewery0 {
+    background-image: url('https://images.unsplash.com/photo-1555658636-6e4a36218be7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-size: cover;
+
+
+}
+
+#brewery1 {
+    background-image: url('https://images.unsplash.com/photo-1542835497-a6813df96ed9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80');
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-size: cover;
+
+
+}
+
+#brewery2 {
+    background-image: url('https://images.unsplash.com/photo-1584225064785-c62a8b43d148?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-size: cover;
+
+
+}
+
+
+#brewery3 {
+    background-image: url('https://media.istockphoto.com/id/498866230/photo/toasting.jpg?s=1024x1024&w=is&k=20&c=cDo6CSpwfILNHXseJ27fe3zfUJdahn8Mfe6QjcscTKs=');
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0);
+    background-size: cover;
+    color: black;
+
+
+}
+
+#brewery4 {
+    background-image: url('https://images.unsplash.com/photo-1626332714432-acccedc3691e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80');
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-size: cover;
+
+
+}
+/* NOT AFFECTING */
+.mainContent-container{
     display: none;
+}
+
+.allBrewLink {
+    color: rgb(245, 250, 243);
+    font-weight: bold;
+    z-index: 1;
+    display: none;
+}
+/* button {
+    z-index: 1;
 } */
 
 
-/* .each-brewery {
-    border-style: solid;
-} */
+
 
 
