--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,14 @@ header {
     z-index: 1;
     display: none;
 }
+
+.allEvent {
+    color: rgb(245, 250, 243);
+    font-weight: bold;
+    text-shadow: 4px 4px 4px black;
+    z-index: 1;
+    display: none;
+}
 /* #event-container, #brewery-container {
     display: none;
 } */
