--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,18 @@ header {
     background-color: aquamarine;
     text-align: center;
 }
+
+.title {
+    text-shadow: white 4px 4px 4px;
+}
 .event-font {
     color: white;
     text-shadow: 4px 4px 4px white;
 }
 
 #quote {
-    margin-left: 45%;
-}
+    text-align: center;
+    }
 
 #brewery0 {
     background-image: url('https://images.unsplash.com/photo-1555658636-6e4a36218be7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
@@ -54,6 +58,14 @@ header {
 
 #brewery4 {
     background-image: url('https://images.unsplash.com/photo-1626332714432-acccedc3691e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80');
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-size: cover;
+
+
+}
+#brewery5 {
+    background-image: url('https://images.unsplash.com/photo-1575055328016-d94e5d9e3461?ixlib=rb-4.0.3&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80');
     background-repeat: no-repeat;
     background-color: rgba(255, 255, 255, 0);
     background-size: cover;
