--- a/assets/style.css
+++ b/assets/style.css
@@ -131,6 +131,9 @@ header {
     z-index: 1;
     display: none;
 }
+/* .hidden {
+    display: none;
+} */
 
 /* #event-container, #brewery-container {
     display: none;
